# trajectory-optimization-in-defense-evtols

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  fix_airfoil_data.py  live_demonstration.py  pyproject.toml  simple_demonstration.py
.github/workflows/: ci.yml  docs.yml
architecture/: project-approach.md
config/: .pre-commit-config.yaml  default.yaml  development.yaml  production.yaml
data/0_raw/environment/restricted-zones/: restricted_zones.csv  restricted_zones.md
data/0_raw/environment/terrain/: building_footprints.md  terrain_elevation.csv  terrain_elevation.md
data/0_raw/environment/weather/: temperature_profiles.csv  temperature_profiles.md  wind_fields.csv  wind_fields.md
data/0_raw/mission/mission_specs/: mission_specs.csv
data/0_raw/mission/payloads/: payloads.csv
data/0_raw/mission/waypoints/: waypoints.md
deployment/docker/: README.md
deployment/kubernetes/: README.md
docs/: ALGORITHMS_DOCUMENTATION.md  Makefile  conf.py  index.rst  perception_layer_comprehensive_report.md  planning_layer_comprehensive_report.md  scenarios_and_evaluation_protocol.md  system_integration_comprehensive_report.md  vehicle_layer_comprehensive_report.md
docs/api/: README.md
docs/architecture/: README.md
docs/research/: action_plan.md  critical_gaps.md  ieee_paper_structure.md  mathematical_formulations.md
docs/tutorials/: README.md
examples/: advanced_simulation.py  basic_simulation.py  demo_presentation.py  simple_planning_demo.py
examples/terrain-analysis-demo/: terrain_analysis_simple.py
perception-layer/: README.md  requirements.txt  setup.py
perception-layer/architecture/: perception_layer_architecture.md
perception-layer/config/: perception_config.yaml
perception-layer/src/: __init__.py
perception-layer/src/geometry/: __init__.py  clearance_analysis.py  obstacle_detection.py
perception-layer/src/processing/: __init__.py  fusion.py  output.py  quality_control.py  transformation.py
perception-layer/src/urban/: __init__.py
perception-layer/src/utils/: __init__.py  file_utils.py  logging.py
perception-layer/terrain-analysis-demo/: terrain_analysis_explanation.md  terrain_analysis_report.md
perception-layer/tests/: test_geometry_derivatives.py  test_validation.py
project-datasets/5_reports/: airfoil_curves.md  rotor_thrust_curves_multi.md
scripts/: repro_main.py  run_experiment.py  setup_env.py  setup_mlflow.py
src/cli/commands/: config.py  control.py  data.py
src/config/: planning_config.yaml
src/evtol/control/: trajectory_generator.py
src/evtol/core/: __init__.py
src/evtol/planning/: __init__.py  cli.py  config.py  logging.py  types.py
src/evtol/vehicle/: __init__.py  vehicle_types.py
tests/benchmarks/: run_benchmarks.py  scenarios.yaml
tests/integration/: integration_test.py
tests/unit/: __init__.py  test_cli.py  test_imports.py  test_validation.py  test_vehicle_model.py
(+92 files in other folders)
